--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,4 +1,5 @@
 @use "../base/variables" as *;
+@use "../mixins/breakpoints" as *;
 
 .navbar {
   background: var(--white);
@@ -170,7 +171,7 @@
   }
 
   /* Tablet & Mobile */
-  @media (max-width: 1024px) {
+  @include respond-to(lg) {
     &__secondary-menu,
     &__primary-menu {
       display: none;
