--- a/scss/components/_industries.scss
+++ b/scss/components/_industries.scss
@@ -1,5 +1,6 @@
 /** Industries Section **/
 @use "../base/variables" as *;
+@use "../mixins/breakpoints" as *;
 
 .industries {
   padding: 48px 0 48px 0;
@@ -96,7 +97,7 @@
   }
 
   /* Tablet & Mobile */
-  @media (max-width: 1024px) {
+  @include respond-to(lg) {
     &__grid {
       display: flex;
       flex-wrap: wrap;
@@ -129,7 +130,7 @@
   }
 
   /* Mobile tweaks */
-  @media (max-width: 768px) {
+  @include respond-to (md) {
     &__grid {
       grid-template-columns: 1fr;
     }
