--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,6 +13,7 @@ body {
   line-height: 125%;
   color: var(--secondary);
   background-color: var(--white);
+  overflow-x: hidden;
 }
 
 .container {
