--- a/scss/components/_industries.scss
+++ b/scss/components/_industries.scss
@@ -3,7 +3,7 @@
 @use "../mixins/breakpoints" as *;
 
 .industries {
-  padding: 48px 0 48px 0;
+  padding: 40px 0 120px 0;
   background-color: var(--white);
 
   &__heading {
@@ -45,12 +45,12 @@
   }
 
   &__card-title {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(93, 93, 93, 0.936);
     color: var(--white);
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 100px;
     width: 100.8%;
     margin-bottom: -6px;
     font-weight: 600;
@@ -61,6 +61,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    clip-path: polygon(0 13%, 100% 0%, 100% 100%, 0% 100%);
   }
 
   &__card-title-text {
@@ -98,6 +99,8 @@
 
   /* Tablet & Mobile */
   @include respond-to(lg) {
+    margin: 70px 0;
+
     &__grid {
       display: flex;
       flex-wrap: wrap;
@@ -116,7 +119,7 @@
     }
 
     &__card {
-      width: 342px; 
+      width: 342px;
     }
 
     &__card-image {
@@ -130,7 +133,8 @@
   }
 
   /* Mobile tweaks */
-  @include respond-to (md) {
+  @include respond-to(md) {
+    margin: 50px 0;
     &__grid {
       grid-template-columns: 1fr;
     }
