--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,10 +1,25 @@
 @use "../base/variables" as *;
+@use "../mixins/breakpoints" as *;
 
 .footer {
   background-color: var(--secondary);
   color: $white;
   padding-top: 60px;
   font-size: 12px;
+
+  &__pattern--top {
+    top: -130px;
+    position: relative;
+    z-index: 1;
+    width: 100vw;
+    left: 50%;
+    transform: translateX(-50%);
+
+    img {
+      width: 100%;
+      display: block;
+    }
+  }
 
   &__columns {
     display: flex;
@@ -29,7 +44,7 @@
     }
 
     &--buttons {
-      display: none; 
+      display: none;
       gap: 12px;
       margin-top: 12px;
 
@@ -52,7 +67,7 @@
   &__heading-divider {
     display: none;
 
-    @media (max-width: 1024px) {
+    @include respond-to(lg) {
       display: block;
       height: 1px;
       width: 100%;
@@ -181,7 +196,11 @@
   }
 
   /* Tablet & Mobile */
-  @media (max-width: 1024px) {
+  @include respond-to(lg) {
+    &__pattern--top {
+      top: -90px;
+    }
+
     &__columns {
       flex-direction: column;
     }
@@ -317,11 +336,14 @@
         flex: none;
       }
     }
-    
   }
 
   /* Mobile tweaks */
-  @media (max-width: 768px) {
+  @include respond-to(md) {
+    &__pattern--top {
+      top: -70px;
+    }
+
     &__column {
       &--logo {
         img {
