--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1175,8 +1175,13 @@ ul, li {
 /** Best College Section **/
 .college {
   padding: 90px 0 150px 0;
+  position: relative;
+  overflow: hidden;
   /* Tablet & Mobile */
   /* Mobile tweaks */
+}
+.college__bg-shapes {
+  display: none;
 }
 .college__intro {
   text-align: center;
@@ -1203,6 +1208,8 @@ ul, li {
   justify-content: center;
   max-width: 1180px;
   margin: 0 auto;
+  z-index: 5;
+  position: relative;
 }
 .college__card {
   position: relative;
@@ -1258,6 +1265,44 @@ ul, li {
   width: 100%;
   text-align: center;
 }
+@media (max-width: 1024px) and (max-width: 1024px) {
+  .college .college__bg-shapes {
+    max-width: 100vw;
+  }
+  .college .college__shape {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    pointer-events: none;
+    overflow: hidden;
+  }
+  .college .college__shape--31 {
+    top: 1000px;
+    left: 100px;
+    width: 100px;
+  }
+  .college .college__shape--32 {
+    top: 280px;
+    left: 70px;
+    width: 180px;
+  }
+  .college .college__shape--33 {
+    top: 920px;
+    left: 575px;
+    width: 140.55px;
+    z-index: 4;
+  }
+  .college .college__shape--35 {
+    bottom: 990px;
+    right: 150px;
+    width: 150px;
+  }
+  .college .college__shape--36 {
+    bottom: 590px;
+    right: 660px;
+    width: 100px;
+  }
+}
 @media (max-width: 1024px) {
   .college__heading {
     font-size: 34px;
@@ -1288,6 +1333,9 @@ ul, li {
   .college__action .button {
     width: 100%;
     display: block;
+  }
+  .college__action__bg-shapes {
+    display: none;
   }
 }
 
