--- a/scss/components/_study.scss
+++ b/scss/components/_study.scss
@@ -198,11 +198,21 @@
 
 @include respond-to(xxl, min) {
   .study-online__pattern--top {
-    top: -53px;
+    top: -48px;
   }
 
   .study-online__pattern--bottom {
-    bottom: -53px;
+    bottom: -48px;
+  }
+}
+
+@include respond-to(xxxl, min) {
+  .study-online__pattern--top {
+    top: -78px;
+  }
+
+  .study-online__pattern--bottom {
+    bottom: -78px;
   }
 }
 
