--- a/assets/scss/components/_study.scss
+++ b/assets/scss/components/_study.scss
@@ -34,7 +34,7 @@
     position: absolute;
     width: 486px;
     height: 502px;
-    background-color: $primary;
+    background-color: var(--primary);
     transform: rotate(-5deg) skew(-1deg, -1deg) scale(0.97);
     border-radius: 8px;
     z-index: 0;
@@ -54,7 +54,7 @@
   }
 
   &__subheading {
-    color: $primary;
+    color: var(--primary);
     font-family: "Amazing Kids", cursive;
     font-weight: 400;
     font-size: 48px;
@@ -65,13 +65,13 @@
   &__heading {
     font-size: 40px;
     font-weight: 700;
-    color: $secondary;
+    color: var(--secondary);
     line-height: 125%;
     margin-bottom: 10px;
   }
 
   &__text {
-    color: $neutral-grey-2;
+    color: var(--neutral-grey-2);
     line-height: 1.6;
     margin-bottom: 16px;
 
@@ -125,7 +125,7 @@
     &__bg {
       width: 100%;
       height: 100%;
-      background-color: $primary;
+      background-color: var(--primary);
       border-radius: 14.34px;
       z-index: 0;
       transform: rotate(-5deg) skew(-1deg, -1deg) scale(0.97);
@@ -182,7 +182,6 @@
   }
 
   @include respond-to(md) {
-    
     top: auto;
     bottom: auto;
 
@@ -215,4 +214,3 @@
     bottom: -78px;
   }
 }
-
